v3/data-types/data.LINESTARTENDSYMBOL.md
---
layout: sidebar
sidebar: s1
version: "v3"
title: "data.LINESTARTENDSYMBOL"

---

<div class="macroSpec">
   <h3 id="data.LINESTARTENDSYMBOL">data.LINESTARTENDSYMBOL</h3>
   <table class="wovenodd">
      <tr>
         <td colspan="2" class="wovenodd-col2">Symbol that may begin/end a line.</td>
      </tr>
      <tr>
         <td class="wovenodd-col1">
            <strong>Module</strong>
         </td>
         <td class="wovenodd-col2">MEI</td>
      </tr>
      <tr>
         <td class="wovenodd-col1">
            <strong>Used by</strong>
         </td>
         <td class="wovenodd-col2">
            <div class="parent">
               <a class="link_odd_classSpec" href="{{ site.baseurl }}/{{ page.version }}/attribute-classes/att.line.vis.html">att.line.vis</a> (@endsym), 
               <a class="link_odd_classSpec" href="{{ site.baseurl }}/{{ page.version }}/attribute-classes/att.linerend.html">att.linerend</a> (@lendsym)
            </div>
         </td>
      </tr>
      <tr>
         <td class="wovenodd-col1">
            <strong>Allowed values</strong>
         </td>
         <td class="wovenodd-col2">
            <dl>
               <dt>angledown</dt>
               <dd>90 degree turn down (similar to Unicode 231D at end of line, 231C at
                  start).
               </dd>
               <dt>angleup</dt>
               <dd>90 degree turn up (similar to Unicode 231F at end of line, 231E at start).</dd>
               <dt>angleright</dt>
               <dd>90 degree turn right (syntactic sugar for "angledown" for vertical or angled
                  lines).
               </dd>
               <dt>angleleft</dt>
               <dd>90 degree turn left (syntactic sugar for "angleup" for vertical or angled
                  lines).
               </dd>
               <dt>arrow</dt>
               <dd>Filled, triangular arrowhead (similar to SMuFL U+EB78).</dd>
               <dt>arrowopen</dt>
               <dd>Open triangular arrowhead (similar to SMuFL U+EB8A).</dd>
               <dt>arrowwhite</dt>
               <dd>Unfilled, triangular arrowhead (similar to SMuFL U+EB82).</dd>
               <dt>harpoonleft</dt>
               <dd>Harpoon-shaped arrowhead left of line (similar to arrowhead of Unicode
                  U+21BD).
               </dd>
               <dt>harpoonright</dt>
               <dd>Harpoon-shaped arrowhead right of line (similar to arrowhead of Unicode
                  U+21BC).
               </dd>
               <dt>none</dt>
               <dd>No start symbol.</dd>
            </dl>
         </td>
      </tr>
      <tr>
         <td class="wovenodd-col1">
            <strong>Declaration</strong>
         </td>
         <td class="wovenodd-col2">
            <div xml:space="preserve" class="pre">
               <div class="indent1 indent">
                  <span data-indentation="1" class="element">&lt;content&gt;</span>
                  
                  <div class="indent2 indent">
                     <span data-indentation="2" class="element">&lt;valList 
                        <span class="attribute">type=</span>
                        <span class="attributevalue">"closed"</span>&gt;
                     </span>
                     
                     <div class="indent3 indent">
                        <span data-indentation="3" class="element">&lt;valItem 
                           <span class="attribute">ident=</span>
                           <span class="attributevalue">"angledown"</span>&gt;
                        </span>
                        
                        <div class="indent4 indent">
                           <span data-indentation="4" class="element">&lt;desc&gt;</span>90 degree turn down (similar to Unicode 231D at end of line, 231C at
                           start).
                           <span data-indentation="4" class="element">&lt;/desc&gt;</span>
                        </div>
                        
                        <span data-indentation="3" class="element">&lt;/valItem&gt;</span>
                     </div>
                     
                     <div class="indent3 indent">
                        <span data-indentation="3" class="element">&lt;valItem 
                           <span class="attribute">ident=</span>
                           <span class="attributevalue">"angleup"</span>&gt;
                        </span>
                        
                        <div class="indent4 indent">
                           <span data-indentation="4" class="element">&lt;desc&gt;</span>90 degree turn up (similar to Unicode 231F at end of line, 231E at start).
                           <span data-indentation="4" class="element">&lt;/desc&gt;</span>
                        </div>
                        
                        <span data-indentation="3" class="element">&lt;/valItem&gt;</span>
                     </div>
                     
                     <div class="indent3 indent">
                        <span data-indentation="3" class="element">&lt;valItem 
                           <span class="attribute">ident=</span>
                           <span class="attributevalue">"angleright"</span>&gt;
                        </span>
                        
                        <div class="indent4 indent">
                           <span data-indentation="4" class="element">&lt;desc&gt;</span>90 degree turn right (syntactic sugar for "angledown" for vertical or angled
                           lines).
                           <span data-indentation="4" class="element">&lt;/desc&gt;</span>
                        </div>
                        
                        <span data-indentation="3" class="element">&lt;/valItem&gt;</span>
                     </div>
                     
                     <div class="indent3 indent">
                        <span data-indentation="3" class="element">&lt;valItem 
                           <span class="attribute">ident=</span>
                           <span class="attributevalue">"angleleft"</span>&gt;
                        </span>
                        
                        <div class="indent4 indent">
                           <span data-indentation="4" class="element">&lt;desc&gt;</span>90 degree turn left (syntactic sugar for "angleup" for vertical or angled
                           lines).
                           <span data-indentation="4" class="element">&lt;/desc&gt;</span>
                        </div>
                        
                        <span data-indentation="3" class="element">&lt;/valItem&gt;</span>
                     </div>
                     
                     <div class="indent3 indent">
                        <span data-indentation="3" class="element">&lt;valItem 
                           <span class="attribute">ident=</span>
                           <span class="attributevalue">"arrow"</span>&gt;
                        </span>
                        
                        <div class="indent4 indent">
                           <span data-indentation="4" class="element">&lt;desc&gt;</span>Filled, triangular arrowhead (similar to SMuFL U+EB78).
                           <span data-indentation="4" class="element">&lt;/desc&gt;</span>
                        </div>
                        
                        <span data-indentation="3" class="element">&lt;/valItem&gt;</span>
                     </div>
                     
                     <div class="indent3 indent">
                        <span data-indentation="3" class="element">&lt;valItem 
                           <span class="attribute">ident=</span>
                           <span class="attributevalue">"arrowopen"</span>&gt;
                        </span>
                        
                        <div class="indent4 indent">
                           <span data-indentation="4" class="element">&lt;desc&gt;</span>Open triangular arrowhead (similar to SMuFL U+EB8A).
                           <span data-indentation="4" class="element">&lt;/desc&gt;</span>
                        </div>
                        
                        <span data-indentation="3" class="element">&lt;/valItem&gt;</span>
                     </div>
                     
                     <div class="indent3 indent">
                        <span data-indentation="3" class="element">&lt;valItem 
                           <span class="attribute">ident=</span>
                           <span class="attributevalue">"arrowwhite"</span>&gt;
                        </span>
                        
                        <div class="indent4 indent">
                           <span data-indentation="4" class="element">&lt;desc&gt;</span>Unfilled, triangular arrowhead (similar to SMuFL U+EB82).
                           <span data-indentation="4" class="element">&lt;/desc&gt;</span>
                        </div>
                        
                        <span data-indentation="3" class="element">&lt;/valItem&gt;</span>
                     </div>
                     
                     <div class="indent3 indent">
                        <span data-indentation="3" class="element">&lt;valItem 
                           <span class="attribute">ident=</span>
                           <span class="attributevalue">"harpoonleft"</span>&gt;
                        </span>
                        
                        <div class="indent4 indent">
                           <span data-indentation="4" class="element">&lt;desc&gt;</span>Harpoon-shaped arrowhead left of line (similar to arrowhead of Unicode
                           U+21BD).
                           <span data-indentation="4" class="element">&lt;/desc&gt;</span>
                        </div>
                        
                        <span data-indentation="3" class="element">&lt;/valItem&gt;</span>
                     </div>
                     
                     <div class="indent3 indent">
                        <span data-indentation="3" class="element">&lt;valItem 
                           <span class="attribute">ident=</span>
                           <span class="attributevalue">"harpoonright"</span>&gt;
                        </span>
                        
                        <div class="indent4 indent">
                           <span data-indentation="4" class="element">&lt;desc&gt;</span>Harpoon-shaped arrowhead right of line (similar to arrowhead of Unicode
                           U+21BC).
                           <span data-indentation="4" class="element">&lt;/desc&gt;</span>
                        </div>
                        
                        <span data-indentation="3" class="element">&lt;/valItem&gt;</span>
                     </div>
                     
                     <div class="indent3 indent">
                        <span data-indentation="3" class="element">&lt;valItem 
                           <span class="attribute">ident=</span>
                           <span class="attributevalue">"none"</span>&gt;
                        </span>
                        
                        <div class="indent4 indent">
                           <span data-indentation="4" class="element">&lt;desc&gt;</span>No start symbol.
                           <span data-indentation="4" class="element">&lt;/desc&gt;</span>
                        </div>
                        
                        <span data-indentation="3" class="element">&lt;/valItem&gt;</span>
                     </div>
                     
                     <span data-indentation="2" class="element">&lt;/valList&gt;</span>
                  </div>
                  
                  <span data-indentation="1" class="element">&lt;/content&gt;</span>
               </div>
            </div>
         </td>
      </tr>
   </table>
</div>